mds: don't cap log when there are replicated objects

replicas may dirty scatter locks

Fixes: http://tracker.ceph.com/issues/36350
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit 6c1d4c606a9f597196235aa5cd3fa6d98a683290)

Conflicts:
	src/mds/MDCache.cc
	  - maintain auth pin checking mechanism as luminous